--- a/12gy_cpp/12gy_cpp.tex
+++ b/12gy_cpp/12gy_cpp.tex
@@ -110,6 +110,7 @@
 	
 	%TODO 023 beugro pdf
 	%TODO magyarázatok
+	{\LARGE \textbf{Nincs még kész!}}
 	\section{Beugró kérdések}
 	EZek sose fordulhatnak már elő.
 	\begin{enumerate}
